--- a/src/AddText.form
+++ b/src/AddText.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="593" height="429"/>
+      <xy x="48" y="54" width="593" height="512"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -89,7 +89,10 @@
                 <preferred-size width="400" height="400"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <lineWrap value="true"/>
+              <wrapStyleWord value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
