--- a/src/AdminMain.form
+++ b/src/AdminMain.form
@@ -341,6 +341,8 @@
                 </constraints>
                 <properties>
                   <editable value="false"/>
+                  <lineWrap value="true"/>
+                  <wrapStyleWord value="true"/>
                 </properties>
               </component>
               <component id="2e554" class="javax.swing.JLabel">
@@ -426,12 +428,14 @@
                 </constraints>
                 <properties>
                   <editable value="false"/>
+                  <lineWrap value="true"/>
                   <text value=""/>
+                  <wrapStyleWord value="true"/>
                 </properties>
               </component>
               <component id="78689" class="javax.swing.JButton" binding="noticeDeleteButton">
                 <constraints>
-                  <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="5" height="-1"/>
                   </grid>
                 </constraints>
@@ -441,7 +445,7 @@
               </component>
               <component id="78166" class="javax.swing.JButton" binding="noticeChangeButton">
                 <constraints>
-                  <grid row="3" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="3" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="5" height="-1"/>
                   </grid>
                 </constraints>
@@ -477,7 +481,7 @@
               </component>
               <scrollpane id="158ec" binding="noticeScrollPane" custom-create="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
