--- a/src/AdminMain.form
+++ b/src/AdminMain.form
@@ -309,7 +309,7 @@
               </component>
             </children>
           </grid>
-          <grid id="7b2f0" binding="qnaJp" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="7b2f0" binding="qnaJp" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="문의사항 관리"/>
@@ -335,44 +335,6 @@
                   <editable value="false"/>
                 </properties>
               </component>
-              <component id="fe479" class="javax.swing.JTextArea" binding="qnaContensArea">
-                <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="50" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                  <lineWrap value="true"/>
-                  <wrapStyleWord value="true"/>
-                </properties>
-              </component>
-              <component id="2e554" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="내용 : "/>
-                </properties>
-              </component>
-              <component id="f10fc" class="javax.swing.JButton" binding="qnaDeleteButton">
-                <constraints>
-                  <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <enabled value="false"/>
-                  <text value="삭제"/>
-                </properties>
-              </component>
-              <component id="3c35e" class="javax.swing.JButton" binding="qnaAddButton">
-                <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <enabled value="false"/>
-                  <text value="답변 작성"/>
-                </properties>
-              </component>
               <component id="7cf6f" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -393,7 +355,7 @@
               </component>
               <scrollpane id="8f7e1" binding="qnaScrollPane" custom-create="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="3" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -404,6 +366,61 @@
                   </component>
                 </children>
               </scrollpane>
+              <scrollpane id="2d4e6" binding="answerScrollPane" custom-create="true">
+                <constraints>
+                  <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="454" height="221"/>
+                  </grid>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="318c0" class="javax.swing.JTable" binding="answerJTable" custom-create="true">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="3c35e" class="javax.swing.JButton" binding="qnaAddButton">
+                <constraints>
+                  <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="false"/>
+                  <text value="답변 작성"/>
+                </properties>
+              </component>
+              <component id="f10fc" class="javax.swing.JButton" binding="qnaDeleteButton">
+                <constraints>
+                  <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="false"/>
+                  <text value="삭제"/>
+                </properties>
+              </component>
+              <component id="fe479" class="javax.swing.JTextArea" binding="qnaContensArea">
+                <constraints>
+                  <grid row="2" column="2" row-span="2" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="50" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <editable value="false"/>
+                  <lineWrap value="true"/>
+                  <wrapStyleWord value="true"/>
+                </properties>
+              </component>
+              <component id="2e554" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="34" height="221"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="내용 : "/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="2db40" binding="noticeJp" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
